# kiwix-mcp

./: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
kiwix_client/: client.py
kiwix_mcp/: __main__.py  app.py  openapi.py  server.py
tests/: test_cors.py  test_mcp.py  test_openapi.py
